# zub-vm

./: .gitignore  Cargo.toml  LICENSE  README.md  flamegraph.html
examples/: atto.rs  mini.rs
src/: lib.rs
src/compiler/: compiler.rs  mod.rs
src/ir/: builder.rs  ir.rs  mod.rs  types.rs
src/vm/: chunk.rs  disassembler.rs  interop.rs  mod.rs  vm.rs
src/vm/gc/: mod.rs  tag.rs  trace.rs
src/vm/value/: mod.rs  object.rs  value.rs
