[package]
name = "zubbers"
version = "0.0.1"
authors = ["nilq <i.am.niels.nielsen@gmail.com>", "sawcce <sawcce@proton.me>"]
edition = "2018"
homepage = "https://github.com/sawcce/zubbers"
repository = "https://github.com/sawcce/zubbers"
readme = "README.md"
license = "MIT"
description = "A fast, stack-based virtual machine for dynamic languages, with an intuitive IR-builder, garbage collection and NaN-tagging."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.7.2"
fnv = "1.0.3"
colored = "1.9.3"
flame = "0.2.2"
flamer = "0.3"
im-rc = "14.3.0"

[dev-dependencies]
logos = "0.11.4"